# resonance-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Antworten.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: publish-pypi.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  HARDWARE_TESTING.md  PLUGINS.md  PLUGIN_API.md  PLUGIN_CASESTUDY.md  PLUGIN_REPOSITORY.md  PLUGIN_TUTORIAL.md
plugins/: README.md
plugins/example/: __init__.py  plugin.toml
plugins/favorites/: __init__.py  plugin.toml  store.py
plugins/nowplaying/: __init__.py  plugin.toml  store.py
plugins/podcast/: __init__.py  feed_parser.py  opml.py  plugin.toml  providers.py  store.py
plugins/radio/: __init__.py  plugin.toml  radiobrowser.py  store.py  tunein.py
resonance/: __init__.py  __main__.py  _paths.py  content_provider.py  plugin.py  plugin_installer.py  plugin_manager.py  plugin_repository.py  server.py
resonance/config/: __init__.py  devices.toml  legacy.conf  settings.py
resonance/core/: alarm_runtime.py  artwork.py  dsd_parser.py  events.py  library.py  library_db.py  playlist.py  playlist_formats.py  scanner.py
resonance/core/db/: __init__.py  queries_albums.py  queries_artists.py  queries_meta.py  queries_tracks.py  query_builder.py  schema.py
resonance/display/: __init__.py  fonts.py  manager.py  renderer.py
resonance/player/: capabilities.py  client.py  registry.py
resonance/protocol/: __init__.py  cli.py  commands.py  discovery.py  slimproto.py
resonance/streaming/: __init__.py  crossfade.py  policy.py  runtime.py  seek_coordinator.py  server.py  transcoder.py
resonance/ui/: __init__.py
resonance/web/: __init__.py  cometd.py  jsonrpc.py  jsonrpc_helpers.py  security.py  server.py
resonance/web/handlers/: __init__.py  alarm.py  compat.py  library.py  menu.py  menu_helpers.py  playback.py  playlist.py  playlist_helpers.py  playlist_mutation.py  playlist_persistence.py  playlist_playback.py  playlist_query.py  plugins.py  seeking.py  status.py  sync.py
resonance/web/routes/: api.py  artwork.py  cometd.py  streaming.py
scripts/: README.md  decode-slimproto.py  dev.ps1  hardware_e2e_matrix.ps1  parse_slim.py  rpc-console.py  rpc_test_console.py  smoketest.py  status_handoff_smoke.py
tests/: README.md  conftest.py  test_alarm_runtime.py  test_cli.py  test_cometd.py  test_commands.py  test_config.py  test_content_provider.py  test_core_library.py  test_crossfade.py  test_display.py  test_displaystatus.py  test_dsd_parser.py  test_favorites_plugin.py  test_icy_push.py  test_jsonrpc_helpers.py  test_nowplaying_plugin.py  test_playlist.py  test_playlist_formats.py  test_playlist_prefetch_fast_path.py  test_plugin_api.py  test_plugin_handlers.py  test_plugin_installer.py  test_plugin_repository.py  test_plugin_settings.py  test_plugin_states.py  test_plugin_system.py  test_plugin_ui.py  test_podcast_plugin.py  test_radio_plugin.py  test_radio_status_metadata.py  test_raopbridge_ui.py  test_remote_meta.py  test_restart_stream_flags.py  test_restream_live.py  test_security.py  test_seeking_offsets.py  test_slimproto.py  test_streaming.py  test_transcoder.py  (+1 more)
web-ui/: README.md  package-lock.json  package.json
web-ui/src/: app.css  app.html
web-ui/src/lib/: api.ts
web-ui/src/lib/components/: AlarmSettings.svelte  DynamicIcon.svelte  FavoritesView.svelte  NowPlaying.svelte  PlayerSelector.svelte  PlaylistsView.svelte  PluginCard.svelte  PluginSettings.svelte  PluginsAvailable.svelte  PluginsInstalled.svelte  PluginsView.svelte  PodcastView.svelte  Queue.svelte  RadioView.svelte  ResizeHandle.svelte  SearchBar.svelte  SettingsPanel.svelte  Sidebar.svelte  ToastContainer.svelte  TrackList.svelte
web-ui/src/lib/plugin-ui/: PluginPageView.svelte  PluginRenderer.svelte  actions.svelte.ts  registry.ts
web-ui/src/lib/plugin-ui/widgets/: ActionButton.svelte  Alert.svelte  Card.svelte  Column.svelte  DataTable.svelte  Form.svelte  Heading.svelte  KeyValue.svelte  MarkdownBlock.svelte  Modal.svelte  NumberInput.svelte  ProgressBar.svelte  Row.svelte  Select.svelte  StatusBadge.svelte  Tabs.svelte  TextBlock.svelte  TextInput.svelte  Textarea.svelte  Toggle.svelte
web-ui/src/lib/stores/: color.svelte.ts  player.svelte.ts  toast.svelte.ts  ui.svelte.ts
web-ui/src/routes/: +layout.svelte  +page.svelte
