[project]
name = "resonance-server"
version = "0.1.0"
description = "A modern Python implementation of the Logitech Media Server (Squeezebox Server)"
readme = "README.md"
license = { text = "GPL-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Resonance Contributors" }
]
keywords = ["squeezebox", "slimserver", "music", "streaming", "audio", "multiroom"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Home Automation",
    "Typing :: Typed",
]

dependencies = [
    "mutagen>=1.47.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
blurhash = [
    "blurhash-python>=1.2.0",
    "pillow>=10.0.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "pre-commit>=3.8.0",
    "detect-secrets>=1.5.0",
]

all = [
    "resonance-server[blurhash,dev]",
]

[project.scripts]
resonance = "resonance.__main__:main"

[project.urls]
Homepage = "https://github.com/endegelaende/resonance-server"
Documentation = "https://github.com/endegelaende/resonance-server/docs"
Repository = "https://github.com/endegelaende/resonance-server"
Issues = "https://github.com/endegelaende/resonance-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resonance"]

# Bundle core plugins, static assets, and web-ui build into the wheel.
# They end up under resonance/_bundled/ so _paths.py can find them
# regardless of whether we're running from source or from pip install.
[tool.hatch.build.targets.wheel.force-include]
"plugins" = "resonance/_bundled/plugins"
"static" = "resonance/_bundled/static"
"web-ui/build" = "resonance/_bundled/web-ui/build"

# Exclude third-party binaries (platform-specific, not for PyPI)
# and development/local-only files from the sdist.
[tool.hatch.build.targets.sdist]
exclude = [
    "third_party/bin/",
    "third_party/squeezelite/",
    "data/",
    "MagicMock/",
    ".pytest_cache/",
    ".zed/",
    ".claude/",
    "CLAUDE.md",
    "web-ui/node_modules/",
    "web-ui/.svelte-kit/",
    "docs/dev/",
    "radio.json",
    "resonance.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
markers = [
    "requires_pil: mark test as requiring Pillow (auto-skipped if unavailable)",
    "requires_tools: mark test as requiring external audio tools — flac, lame, sox (auto-skipped if unavailable)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["resonance"]

[tool.coverage.run]
source = ["resonance"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
